--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>TESTING</h1>
+<h1 class="testing">TESTING</h1>
 </br>
-<h2>+++</h2>
+<h1 class="star">+++</h1>
 </body>
