--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+   <section id="header">
 <h1 class="testing">TESTING</h1>
-</br>
+   </section>
 <h1 class="star">+++</h1>
 </body>
