--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
    <section id="header">
 <h1 class="testing">TESTING</h1>
    </section>
+   <section id="body">
 <h1 class="star">+++</h1>
+   </section>
 </body>
