--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <h1 class="testing">TESTING</h1>
    </section>
    <section id="body">
-<h1 class="star">+++</h1>
+<h1 class="star"></h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Turpis egestas pretium aenean pharetra magna ac placerat vestibulum. Suspendisse sed nisi lacus sed viverra tellus in hac. Donec ac odio tempor orci dapibus ultrices in iaculis nunc. Sem et tortor consequat id porta nibh venenatis cras. Porta nibh venenatis cras sed. Nec tincidunt praesent semper feugiat. Et pharetra pharetra massa massa ultricies mi quis. Vitae congue mauris rhoncus aenean vel elit scelerisque mauris pellentesque. Lectus nulla at volutpat diam ut venenatis tellus in metus. Nam libero justo laoreet sit amet cursus sit. Felis eget velit aliquet sagittis id consectetur purus ut. Et leo duis ut diam quam nulla porttitor massa. Ullamcorper malesuada proin libero nunc consequat interdum varius. Massa enim nec dui nunc. Tellus at urna condimentum mattis pellentesque id nibh tortor. Eleifend quam adipiscing vitae proin sagittis nisl. Aliquam eleifend mi in nulla posuere sollicitudin. Ac odio tempor orci dapibus ultrices. Et tortor at risus viverra adipiscing at in.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id venenatis a condimentum vitae. Molestie a iaculis at erat pellentesque. Elementum nisi quis eleifend quam adipiscing vitae proin sagittis. Leo in vitae turpis massa sed elementum tempus egestas. Massa ultricies mi quis hendrerit dolor magna eget est lorem. Porttitor leo a diam sollicitudin tempor id. Cursus turpis massa tincidunt dui ut ornare lectus sit. Donec ac odio tempor orci. Commodo quis imperdiet massa tincidunt nunc pulvinar sapien et ligula. Pulvinar elementum integer enim neque. Lorem mollis aliquam ut porttitor leo a diam.</p>
+<h1 class="star"></h1>
    </section>
 </body>
