--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<?php
+$x = "Pilot Garden Clothing Co.";
+?>
 <html lang="en">
 
 <head>
@@ -14,7 +17,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Helium</title>
+  <title><?php echo "$x"; ?></title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +32,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Helium</a>
+      <a class="navbar-brand" href="#">Pilot Garden Clothing Co.</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -104,7 +107,7 @@
 
   <!-- Footer -->
   <nav class="navbar navbar-expand-lg fixed-bottom navbar-light bg-light" style="">
-  <div class="container"><a class="" href="#!"><span class="navbar-text">Copyright © 2019 Helium</span></a>
+  <div class="container"><a class="" href="#!"><span class="navbar-text">Copyright © 2019 Pilot Garden Clothing Co.</span></a>
 <a class="" href="#!"><span class="navbar-text ml-auto">All rights reserved, Kevin Lawrence</span></a></div>
 </nav>
   <!-- Bootstrap core JavaScript -->
