Update and rename index.php to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<?php
-$x = "Pilot Garden Clothing Co.";
-?>
+
 <html lang="en">
 
 <head>
@@ -17,7 +15,7 @@ $x = "Pilot Garden Clothing Co.";
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title><?php echo "$x"; ?></title>
+  <title>Pilot Garden Clothing Co.</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
