--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 
   <!-- Custom styles for this template -->
   <link href="css/small-business.css" rel="stylesheet">
+    
+    <!-- custom styles -->
+      <link href="css/webfont/styles.css" rel="stylesheet">
 
 </head>
 
