--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
     
     <!-- custom styles -->
       <link href="css/webfont/styles.css" rel="stylesheet">
-
-</head>
+<style>@font-face { font-family: 'MiauroSans'; src: url('/css/webfont/MiauroSans.eot?#iefix') format('embedded-opentype'), url('/css/webfont/MiauroSans.woff') format('woff'), url('/css/webfont/MiauroSans.ttf') format('truetype'), url('/css/webfont/MiauroSans.svg#MiauroSans') format('svg'); font-weight: normal; font-style: normal; }
+</style>
+  </head>
 
 <body>
 
