--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       <link href="css/webfont/styles.css" rel="stylesheet">
 <style>@font-face { font-family: 'MiauroSans'; src: url('/css/webfont/MiauroSans.eot?#iefix') format('embedded-opentype'), url('/css/webfont/MiauroSans.woff') format('woff'), url('/css/webfont/MiauroSans.ttf') format('truetype'), url('/css/webfont/MiauroSans.svg#MiauroSans') format('svg'); font-weight: normal; font-style: normal; }
 </style>
+  <style>
+  body {
+  font-family: "MiauroSans"!important;}
+  </style>
   </head>
 
 <body>
