--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     
     <!-- custom styles -->
       <link href="css/webfont/styles.css" rel="stylesheet">
-<style>@font-face { font-family: 'MiauroSans'; src: url('/css/webfont/MiauroSans.eot?#iefix') format('embedded-opentype'), url('/css/webfont/MiauroSans.woff') format('woff'), url('/css/webfont/MiauroSans.ttf') format('truetype'), url('/css/webfont/MiauroSans.svg#MiauroSans') format('svg'); font-weight: normal; font-style: normal; }
-</style>
+<style>@font-face { font-family: 'DomesticManners'; src: url('/css/webfont/DomesticManners.eot?#iefix') format('embedded-opentype'), url('/css/webfont/DomesticManners.woff') format('woff'), url('/css/webfont/DomesticManners.ttf') format('truetype'), url('/css/webfont/DomesticManners.svg#DomesticManners') format('svg'); font-weight: normal; font-style: normal; }
+  </style>
   <style>
   body {
-  font-family: "MiauroSans"!important;}
+  font-family: "DomesticManners"!important;}
   </style>
   </head>
 
