--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
   </style>
   <style>
   body {
+    padding: 0px!important;
   font-family: "DomesticManners"!important;}
   </style>
   </head>
 
-<body>
+<body class="wrapper">
 
   <!-- Navigation -->
   <nav id="sidebar">
