--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </nav>
 
   <!-- Page Content -->
-  <div class="container mt-5">
+  <div class="container">
    
 <h1 class="my-4">Page Heading
     <small>Secondary Text</small>
