--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
   body {
     padding: 0px!important;
   font-family: "DomesticManners"!important;}
+  .img-pro {
+  width: 600px;
+    height: 750px;
+  }
   </style>
   </head>
 
@@ -104,12 +108,12 @@
   <!-- Portfolio Item Row -->
   <div class="row">
 
-    <div class="col-md-8">
-      <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+    <div class="col">
+      <img class="img-fluid" src="images/sampletee.png" alt="">
     </div>
 
-    <div class="col-md-4">
-      <h3 class="my-3">Project Description</h3>
+    <div class="col">
+      <h3 class="my-3">Pilot Garden Clothing Company Essential Muted White Fleece Tee</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
       <h3 class="my-3">Project Details</h3>
       <ul>
