--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
   <!-- Navigation -->
   <nav id="sidebar">
             <div class="sidebar-header">
-                <h3>Bootstrap Sidebar</h3>
+                <h4>Pilot Garden Clothing Company</h4>
             </div>
 
             <ul class="list-unstyled components">
-                <p>Dummy Heading</p>
+             <!--   <p>Dummy Heading</p> -->
                 <li class="active">
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
@@ -88,14 +88,14 @@
                 </li>
             </ul>
 
-            <ul class="list-unstyled CTAs">
+           <!-- <ul class="list-unstyled CTAs">
                 <li>
                     <a href="https://bootstrapious.com/tutorial/files/sidebar.zip" class="download">Download source</a>
                 </li>
                 <li>
                     <a href="https://bootstrapious.com/p/bootstrap-sidebar" class="article">Back to article</a>
                 </li>
-            </ul>
+            </ul> -->
         </nav>
 
   <!-- Page Content -->
