--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
   <style>
   body {
     padding: 0px!important;
-  font-family: "DomesticManners"!important;}
+  font-family: "DomesticManners"!important;
+  background: #fff;
+  }
   .img-pro {
   width: 600px;
     height: 750px;
@@ -134,25 +136,25 @@
 
     <div class="col-md-3 col-sm-6 mb-4">
       <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            <img class="img-fluid" src="images/samplepants.png" alt="">
           </a>
     </div>
 
     <div class="col-md-3 col-sm-6 mb-4">
       <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            <img class="img-fluid" src="images/sampletee.png" alt="">
           </a>
     </div>
 
     <div class="col-md-3 col-sm-6 mb-4">
       <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            <img class="img-fluid" src="images/samplepants.png" alt="">
           </a>
     </div>
 
     <div class="col-md-3 col-sm-6 mb-4">
       <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+            <img class="img-fluid" src="images/sampletee.png" alt="">
           </a>
     </div>
 
