--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
   <!-- Page Content -->
   <div class="container">
    
-<h1 class="my-4">Page Heading
-    <small>Secondary Text</small>
+<h1 class="my-4">Highlighted Product
+    <small></small>
   </h1>
 
   <!-- Portfolio Item Row -->
@@ -117,13 +117,19 @@
     <div class="col">
       <h3 class="my-3">Pilot Garden Clothing Company Essential Muted White Fleece Tee</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-      <h3 class="my-3">Project Details</h3>
+      <h3 class="my-3">Product Details</h3>
       <ul>
         <li>Lorem Ipsum</li>
         <li>Dolor Sit Amet</li>
         <li>Consectetur</li>
         <li>Adipiscing Elit</li>
       </ul>
+  <div class="input-group">
+  <div class="input-group-prepend">
+    <button class="btn btn-success" type="button">Add to Cart</button>
+  </div>
+  <input type="text" class="form-control" placeholder="$45.99" aria-label="" aria-describedby="basic-addon1" readonly="">
+</div>
     </div>
 
   </div>
