--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <style>
   body {
     padding: 0px!important;
-  font-family: "DomesticManners"!important;
+//  font-family: "DomesticManners"!important;
   background: #fff;
   }
   .img-pro {
