--- a/index.html
+++ b/index.html
@@ -52,39 +52,27 @@
             <ul class="list-unstyled components">
              <!--   <p>Dummy Heading</p> -->
                 <li class="active">
-                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
+                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Products</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
                         <li>
-                            <a href="#">Home 1</a>
+                            <a href="#">New Releases</a>
+                        </li>
+                        
+                        <li>
+                            <a href="#">Essentials</a>
                         </li>
                         <li>
-                            <a href="#">Home 2</a>
+                            <a href="#">Customs</a>
                         </li>
                         <li>
-                            <a href="#">Home 3</a>
+                            <a href="#">Archived</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="#">FaQ</a>
                 </li>
-                <li>
-                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu">
-                        <li>
-                            <a href="#">Page 1</a>
-                        </li>
-                        <li>
-                            <a href="#">Page 2</a>
-                        </li>
-                        <li>
-                            <a href="#">Page 3</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">Portfolio</a>
-                </li>
+                
                 <li>
                     <a href="#">Contact</a>
                 </li>
