--- a/products/essential-military-pants.html
+++ b/products/essential-military-pants.html
@@ -99,7 +99,7 @@
   <div class="row">
 
     <div class="col">
-      <img class="img-fluid" src="images/sampletee.png" alt="">
+      <img class="img-fluid" src="images/samplepants.png" alt="">
     </div>
 
     <div class="col">
