--- a/products/essential-white-fleece-tee.html
+++ b/products/essential-white-fleece-tee.html
@@ -160,8 +160,8 @@
   <!-- Footer -->
  
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../vendor/jquery/jquery.min.js"></script>
+  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
