--- a/products/essential-white-fleece-tee.html
+++ b/products/essential-white-fleece-tee.html
@@ -129,25 +129,25 @@
   <div class="row">
 
     <div class="col-md-3 col-sm-6 mb-4">
-      <a href="essential-military-pants">
+      <a href="essential-military-pants.html">
             <img class="img-fluid" src="../images/samplepants.png" alt="">
           </a>
     </div>
 
     <div class="col-md-3 col-sm-6 mb-4">
-      <a href="essential-white-fleece-tee">
+      <a href="essential-white-fleece-tee.html">
             <img class="img-fluid" src="../images/sampletee.png" alt="">
           </a>
     </div>
 
     <div class="col-md-3 col-sm-6 mb-4">
-      <a href="essential-military-pants">
+      <a href="essential-military-pants.html">
             <img class="img-fluid" src="../images/samplepants.png" alt="">
           </a>
     </div>
 
     <div class="col-md-3 col-sm-6 mb-4">
-      <a href="essential-white-fleece-tee">
+      <a href="essential-white-fleece-tee.html">
             <img class="img-fluid" src="../images/sampletee.png" alt="">
           </a>
     </div>
