--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@
     <!-- custom styles -->
       <link href="css/webfont/styles.css" rel="stylesheet">
         <link href="css/sidenav.css" rel="stylesheet">
+          <link href="css/the-big-picture.css" rel="stylesheet">
 <style>@font-face { font-family: 'DomesticManners'; src: url('/css/webfont/DomesticManners.eot?#iefix') format('embedded-opentype'), url('/css/webfont/DomesticManners.woff') format('woff'), url('/css/webfont/DomesticManners.ttf') format('truetype'), url('/css/webfont/DomesticManners.svg#DomesticManners') format('svg'); font-weight: normal; font-style: normal; }
   </style>
   <style>
   body {
     padding: 0px!important;
-//  font-family: "DomesticManners"!important;
-  background: #fff;
   }
   .img-pro {
   width: 600px;
