--- a/index.html
+++ b/index.html
@@ -90,68 +90,10 @@
   <!-- Page Content -->
   <div class="container">
    
-<h1 class="my-4">Highlighted Product
-    <small></small>
+<h1 class="my-4">Pilot Garden Clothing Company
+    <a href="products/"><small>Shop Essentials</small></a>
   </h1>
 
-  <!-- Portfolio Item Row -->
-  <div class="row">
-
-    <div class="col">
-      <img class="img-fluid" src="images/sampletee.png" alt="">
-    </div>
-
-    <div class="col">
-      <h3 class="my-3">Pilot Garden Clothing Company Essential Muted White Fleece Tee</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-      <h3 class="my-3">Product Details</h3>
-      <ul>
-        <li>Lorem Ipsum</li>
-        <li>Dolor Sit Amet</li>
-        <li>Consectetur</li>
-        <li>Adipiscing Elit</li>
-      </ul>
-  <div class="input-group">
-  <div class="input-group-prepend">
-    <button class="btn btn-success" type="button">Add to Cart</button>
-  </div>
-  <input type="text" class="form-control" placeholder="$45.99" aria-label="" aria-describedby="basic-addon1" readonly="">
-</div>
-    </div>
-
-  </div>
-  <!-- /.row -->
-
-  <!-- Related Projects Row -->
-  <h3 class="my-4">Related Projects</h3>
-
-  <div class="row">
-
-    <div class="col-md-3 col-sm-6 mb-4">
-      <a href="#">
-            <img class="img-fluid" src="images/samplepants.png" alt="">
-          </a>
-    </div>
-
-    <div class="col-md-3 col-sm-6 mb-4">
-      <a href="#">
-            <img class="img-fluid" src="images/sampletee.png" alt="">
-          </a>
-    </div>
-
-    <div class="col-md-3 col-sm-6 mb-4">
-      <a href="#">
-            <img class="img-fluid" src="images/samplepants.png" alt="">
-          </a>
-    </div>
-
-    <div class="col-md-3 col-sm-6 mb-4">
-      <a href="#">
-            <img class="img-fluid" src="images/sampletee.png" alt="">
-          </a>
-    </div>
-
-  </div>
 
   </div>
   <!-- /.container -->
