--- a/products/essential-white-fleece-tee.html
+++ b/products/essential-white-fleece-tee.html
@@ -119,7 +119,23 @@
   <input type="text" class="form-control" placeholder="$45.99" aria-label="" aria-describedby="basic-addon1" readonly="">
 </div>
     </div>
-
+<div class="btn-group btn-group-toggle" data-toggle="buttons">
+  <label class="btn btn-secondary active">
+    <input type="radio" name="options" id="S" autocomplete="off" > S
+  </label>
+  <label class="btn btn-secondary">
+    <input type="radio" name="options" id="M" autocomplete="off"> M
+  </label>
+  <label class="btn btn-secondary">
+    <input type="radio" name="options" id="L" autocomplete="off"> L
+  </label>
+  <label class="btn btn-secondary">
+    <input type="radio" name="options" id="XL" autocomplete="off"> XL
+  </label>
+  <label class="btn btn-secondary">
+    <input type="radio" name="options" id="2XL" autocomplete="off"> 2XL
+  </label>
+</div>
   </div>
   <!-- /.row -->
 
