--- a/products/essential-white-fleece-tee.html
+++ b/products/essential-white-fleece-tee.html
@@ -112,14 +112,16 @@
         <li>Consectetur</li>
         <li>Adipiscing Elit</li>
       </ul>
-  <div class="input-group">
+  <div class="input-group my-3">
   <div class="input-group-prepend">
     <button class="btn btn-success" type="button">Add to Cart</button>
   </div>
   <input type="text" class="form-control" placeholder="$45.99" aria-label="" aria-describedby="basic-addon1" readonly="">
 </div>
     </div>
-<div class="btn-group btn-group-toggle" data-toggle="buttons">
+
+</div>
+  <div class="btn-group btn-group-toggle my-3" data-toggle="buttons">
   <label class="btn btn-secondary active">
     <input type="radio" name="options" id="S" autocomplete="off" > S
   </label>
@@ -135,7 +137,6 @@
   <label class="btn btn-secondary">
     <input type="radio" name="options" id="2XL" autocomplete="off"> 2XL
   </label>
-</div>
   </div>
   <!-- /.row -->
 
