--- a/products/essential-military-pants.html
+++ b/products/essential-military-pants.html
@@ -112,12 +112,36 @@
         <li>Consectetur</li>
         <li>Adipiscing Elit</li>
       </ul>
-  <div class="input-group">
+  <div class="input-group my-3">
   <div class="input-group-prepend">
     <button class="btn btn-success" type="button">Add to Cart</button>
   </div>
   <input type="text" class="form-control" placeholder="$116.95" aria-label="" aria-describedby="basic-addon1" readonly="">
 </div>
+  <div class="btn-group btn-group-toggle my-3" data-toggle="buttons">
+  <label class="btn btn-secondary active">
+    <input type="radio" name="options" id="S" autocomplete="off"> 30x32
+  </label>
+  <label class="btn btn-secondary">
+    <input type="radio" name="options" id="M" autocomplete="off"> 32x32
+  </label>
+  <label class="btn btn-secondary">
+    <input type="radio" name="options" id="L" autocomplete="off"> 34x32
+  </label>
+  <label class="btn btn-secondary">
+    <input type="radio" name="options" id="XL" autocomplete="off"> 36x32
+  </label>
+  <label class="btn btn-secondary">
+    <input type="radio" name="options" id="2XL" autocomplete="off"> 38x32
+  </label>
+  <label class="btn btn-secondary">
+    <input type="radio" name="options" id="2XL" autocomplete="off"> 40x32
+  </label>
+  <label class="btn btn-secondary">
+    <input type="radio" name="options" id="2XL" autocomplete="off"> 42x32
+  </label>
+  
+  </div>
     </div>
 
   </div>
