--- a/products/essentials/essential-military-pants.html
+++ b/products/essentials/essential-military-pants.html
@@ -18,14 +18,14 @@
   <title>Pilot Garden Clothing Co.</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="../../../../../../../../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="../../../../../../../../../css/small-business.css" rel="stylesheet">
+  <link href="../../css/small-business.css" rel="stylesheet">
     
     <!-- custom styles -->
-      <link href="../../../../../../../../../css/webfont/styles.css" rel="stylesheet">
-        <link href="../../../../../../../../../css/sidenav.css" rel="stylesheet">
+      <link href="../../css/webfont/styles.css" rel="stylesheet">
+        <link href="../../css/sidenav.css" rel="stylesheet">
 <style>@font-face { font-family: 'DomesticManners'; src: url('/css/webfont/DomesticManners.eot?#iefix') format('embedded-opentype'), url('/css/webfont/DomesticManners.woff') format('woff'), url('/css/webfont/DomesticManners.ttf') format('truetype'), url('/css/webfont/DomesticManners.svg#DomesticManners') format('svg'); font-weight: normal; font-style: normal; }
   </style>
   <style>
@@ -99,7 +99,7 @@
   <div class="row">
 
     <div class="col">
-      <img class="img-fluid" src="../../../../../../../../../images/samplepants.png" alt="">
+      <img class="img-fluid" src="../../images/samplepants.png" alt="">
     </div>
 
     <div class="col">
@@ -154,25 +154,25 @@
 
     <div class="col-md-3 col-sm-6 mb-4">
       <a href="essential-military-pants.html">
-            <img class="img-fluid" src="../../../../../../../../../images/samplepants.png" alt="">
+            <img class="img-fluid" src="../../images/samplepants.png" alt="">
           </a>
     </div>
 
     <div class="col-md-3 col-sm-6 mb-4">
       <a href="essential-white-fleece-tee.html">
-            <img class="img-fluid" src="../../../../../../../../../images/sampletee.png" alt="">
+            <img class="img-fluid" src="../../images/sampletee.png" alt="">
           </a>
     </div>
 
     <div class="col-md-3 col-sm-6 mb-4">
       <a href="essential-military-pants.html">
-            <img class="img-fluid" src="../../../../../../../../../images/samplepants.png" alt="">
+            <img class="img-fluid" src="../../images/samplepants.png" alt="">
           </a>
     </div>
 
     <div class="col-md-3 col-sm-6 mb-4">
       <a href="essential-white-fleece-tee.html">
-            <img class="img-fluid" src="../../../../../../../../../images/sampletee.png" alt="">
+            <img class="img-fluid" src="../../images/sampletee.png" alt="">
           </a>
     </div>
 
@@ -184,8 +184,8 @@
   <!-- Footer -->
  
   <!-- Bootstrap core JavaScript -->
-  <script src="../vendor/jquery/jquery.min.js"></script>
-  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../../vendor/jquery/jquery.min.js"></script>
+  <script src="../../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
