--- a/products/index.html
+++ b/products/index.html
@@ -18,15 +18,14 @@
   <title>Pilot Garden Clothing Co.</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/small-business.css" rel="stylesheet">
+  <link href="../css/small-business.css" rel="stylesheet">
     
     <!-- custom styles -->
-      <link href="css/webfont/styles.css" rel="stylesheet">
-        <link href="css/sidenav.css" rel="stylesheet">
-          <link href="css/the-big-picture.css" rel="stylesheet">
+      <link href="../css/webfont/styles.css" rel="stylesheet">
+        <link href="../css/sidenav.css" rel="stylesheet">
 <style>@font-face { font-family: 'DomesticManners'; src: url('/css/webfont/DomesticManners.eot?#iefix') format('embedded-opentype'), url('/css/webfont/DomesticManners.woff') format('woff'), url('/css/webfont/DomesticManners.ttf') format('truetype'), url('/css/webfont/DomesticManners.svg#DomesticManners') format('svg'); font-weight: normal; font-style: normal; }
   </style>
   <style>
@@ -195,8 +194,8 @@
   <!-- Footer -->
  
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../vendor/jquery/jquery.min.js"></script>
+  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
