--- a/products/index.html
+++ b/products/index.html
@@ -34,8 +34,7 @@
     background-color: #fff;
   }
   .img-pro {
-  width: 600px;
-    height: 750px;
+ max-width: 60%!important;
   }
   </style>
   </head>
@@ -98,7 +97,7 @@
       <div class="row">
         <div class="col-md-7">
           <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="../images/samplepants.png" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0 img-pro" src="../images/samplepants.png" alt="">
           </a>
         </div>
         <div class="col-md-5">
@@ -115,7 +114,7 @@
       <div class="row">
         <div class="col-md-7">
           <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="../images/sampletee.png" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0 img-pro" src="../images/sampletee.png" alt="">
           </a>
         </div>
         <div class="col-md-5">
@@ -132,7 +131,7 @@
       <div class="row">
         <div class="col-md-7">
           <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0 img-pro" src="../images/comingsoon.png" alt="">
           </a>
         </div>
         <div class="col-md-5">
@@ -150,7 +149,7 @@
 
         <div class="col-md-7">
           <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0 img-pro" src="../images/comingsoon.png" alt="">
           </a>
         </div>
         <div class="col-md-5">
