--- a/products/index.html
+++ b/products/index.html
@@ -131,7 +131,7 @@
       <div class="row">
         <div class="col-md-7">
           <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0 img-pro" src="../images/comingsoon.png" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0 img-pro" src="../images/soon.png" alt="">
           </a>
         </div>
         <div class="col-md-5">
@@ -149,7 +149,7 @@
 
         <div class="col-md-7">
           <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0 img-pro" src="../images/comingsoon.png" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0 img-pro" src="../images/soon.png" alt="">
           </a>
         </div>
         <div class="col-md-5">
