--- a/products/index.html
+++ b/products/index.html
@@ -135,9 +135,9 @@
           </a>
         </div>
         <div class="col-md-5">
-          <h3>Project Three</h3>
+          <h3>Customs</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-          <a class="btn btn-primary" href="#">View Project</a>
+          <a class="btn btn-primary" href="#">Shop</a>
         </div>
       </div>
       <!-- /.row -->
@@ -153,9 +153,9 @@
           </a>
         </div>
         <div class="col-md-5">
-          <h3>Project Four</h3>
+          <h3>Archived</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-          <a class="btn btn-primary" href="#">View Project</a>
+          <a class="btn btn-primary" href="#">View</a>
         </div>
       </div>
       <!-- /.row -->
