--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <!-- Navigation -->
   <nav id="sidebar">
             <div class="sidebar-header">
-                <h4>Pilot Garden Clothing Company</h4>
+                <a href="#"><h4>Pilot Garden Clothing Company</h4></a>
             </div>
 
             <ul class="list-unstyled components">
@@ -54,26 +54,26 @@
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Products</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
                         <li>
-                            <a href="#">New Releases</a>
+                            <a href="products/new">New Releases</a>
                         </li>
                         
                         <li>
-                            <a href="#">Essentials</a>
+                            <a href="products/essentials">Essentials</a>
                         </li>
                         <li>
-                            <a href="#">Customs</a>
+                            <a href="products/custom">Customs</a>
                         </li>
                         <li>
-                            <a href="#">Archived</a>
+                            <a href="products/archive">Archived</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#">FaQ</a>
+                    <a href="page/faq">FaQ</a>
                 </li>
                 
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="page/contact">Contact</a>
                 </li>
             </ul>
 
