--- a/products/index.html
+++ b/products/index.html
@@ -96,7 +96,7 @@
       <!-- Project One -->
       <div class="row">
         <div class="col-md-7">
-          <a href="#">
+          <a href="new/">
             <img class="img-fluid rounded mb-3 mb-md-0 img-pro" src="../images/samplepants.png" alt="">
           </a>
         </div>
@@ -113,7 +113,7 @@
       <!-- Project Two -->
       <div class="row">
         <div class="col-md-7">
-          <a href="#">
+          <a href="essentials/">
             <img class="img-fluid rounded mb-3 mb-md-0 img-pro" src="../images/sampletee.png" alt="">
           </a>
         </div>
@@ -130,7 +130,7 @@
       <!-- Project Three -->
       <div class="row">
         <div class="col-md-7">
-          <a href="#">
+          <a href="customs/">
             <img class="img-fluid rounded mb-3 mb-md-0 img-pro" src="../images/soon.png" alt="">
           </a>
         </div>
@@ -148,7 +148,7 @@
       <div class="row">
 
         <div class="col-md-7">
-          <a href="#">
+          <a href="archive/">
             <img class="img-fluid rounded mb-3 mb-md-0 img-pro" src="../images/soon.png" alt="">
           </a>
         </div>
