--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div class="container">
    
 <h1 class="my-4">Pilot Garden Clothing Company
-    <a href="products/"><small>Shop Essentials</small></a>
+    <a href="products/"><small>Shop</small></a>
   </h1>
 
 
