--- a/products/essentials/index.html
+++ b/products/essentials/index.html
@@ -98,12 +98,12 @@
 
     <div class="col-lg-3 col-md-4 col-6">
       <a href="essential-white-fleece-tee" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="../../images/sampletee.png" alt="">
+            <img class="img-fluid" src="../../images/sampletee.png" alt="">
           </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
       <a href="essential-military-pants" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="../../images/samplepants.png" alt="">
+            <img class="img-fluid" src="../../images/samplepants.png" alt="">
           </a>
     </div>
 
