--- a/products/index.html
+++ b/products/index.html
@@ -90,7 +90,7 @@
   <div class="container">
    
 <h1 class="my-4">Pilot Garden Clothing Company
-    <a href="products/"><small></small></a>
+    <a href="../"><small>Back</small></a>
   </h1>
 
       <!-- Project One -->
