--- a/products/essentials/essential-military-pants.html
+++ b/products/essentials/essential-military-pants.html
@@ -55,17 +55,17 @@
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Products</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
                         <li>
-                            <a href="../../new">New Releases</a>
+                            <a href="../new">New Releases</a>
                         </li>
                         
                         <li>
-                            <a href="../../essentials">Essentials</a>
+                            <a href="../essentials">Essentials</a>
                         </li>
                         <li>
-                            <a href="../../custom">Customs</a>
+                            <a href="../custom">Customs</a>
                         </li>
                         <li>
-                            <a href="../../archive">Archived</a>
+                            <a href="../archive">Archived</a>
                         </li>
                     </ul>
                 </li>
