--- a/products/essentials/essential-military-pants.html
+++ b/products/essentials/essential-military-pants.html
@@ -92,7 +92,7 @@
   <div class="container">
    
 <h1 class="my-4">Product
-    <small>Essentials</small>
+    <a href="../"><small>Back</small></a>
   </h1>
 
   <!-- Portfolio Item Row -->
